@@ -1,28 +1,38 @@
-language: perl
-sudo: false
+language: minimal
+dist: xenial
+services:
+  - docker
+
+before_install:
+  - curl https://raw.githubusercontent.com/plicease/cip/master/bin/travis-bootstrap | bash
+  - cip before-install
 
 install:
-  - perlbrew list
-  - cpanm -n Dist::Zilla App::af FFI::Platypus
-  - af missing | cpanm
-  - dzil authordeps --missing | cpanm -n
-  - dzil listdeps --missing   | cpanm -n
-
-perl:
-  - "5.14"
-  - "5.16"
-  - "5.18"
-  - "5.20"
-  - "5.22"
-  - "5.24"
-  - "5.26"
+  - cip diag
+  - cip install
 
 script:
-  - dzil test -v
+  - cip script
 
-env:
-  global:
-    - PERL_USE_UNSAFE_INC=0
-  matrix:
-    - ALIEN_INSTALL_TYPE=share
-    - ALIEN_INSTALL_TYPE=system
+jobs:
+  include:
+    - env: CIP_TAG=5.29 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.28 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.28 CIP_ENV=ALIEN_INSTALL_TYPE=system
+    - env: CIP_TAG=5.28-fedora29 CIP_ENV=ALIEN_INSTALL_TYPE=system
+    - env: CIP_TAG=5.28-fedora29 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.26 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.24 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.22 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.20 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.18 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.16 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.14 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.12 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.10 CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.8  CIP_ENV=ALIEN_INSTALL_TYPE=share
+    - env: CIP_TAG=5.8  CIP_ENV=ALIEN_INSTALL_TYPE=system
+
+cache:
+  directories:
+    - "$HOME/.cip"
