@@ -5,7 +5,7 @@ plugin 'PkgConfig' => 'yaml-0.1';
 share {
 
   plugin Download => (
-    url     => 'http://pyyaml.org/download/libyaml/',
+    url     => 'https://pyyaml.org/download/libyaml/',
     version => qr/^yaml-([0-9\.]+)\.tar\.gz$/,
   );
   plugin Extract => 'tar.gz';
