@@ -1,0 +1,20 @@
+#!/bin/bash
+
+set -ex
+if echo $CIP_TAG | grep -q -- -alpine ; then
+  echo alpine
+  #cip sudo apk add cmake
+  #cip sudo apk add pkgconf-dev
+  #cip sudo apk add libffi-dev
+elif  echo $CIP_TAG | grep -q -- -centos ; then
+  echo CentOS
+  #cip sudo yum install -y
+elif echo $CIP_TAG | grep -q -- -fedora ; then
+  echo Fedora
+  #cip sudo yum install -y
+else
+  cip sudo apt-get update
+  cip sudo apt-get -y install libyaml-dev libffi-dev
+fi
+
+cip exec cpanm -n FFI::Platypus
