@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Use https instead of http.
 
 2.04      2018-06-13 04:23:58 -0400
   - Production release identical to 2.03_01
